# persistent-pagination

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  persistent-pagination.cabal  stack-8.4.yaml  stack.yaml
src/Database/Esqueleto/: Pagination.hs
src/Database/Persist/: Pagination.hs
src/Database/Persist/Pagination/: Types.hs
test/Database/Esqueleto/: PaginationSpec.hs
test/Database/Persist/: PaginationSpec.hs
