cabal-version: 1.12

name:           persistent-pagination
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/parsonsmatt/persistent-pagination#readme>
homepage:       https://github.com/parsonsmatt/persistent-pagination#readme
bug-reports:    https://github.com/parsonsmatt/persistent-pagination/issues
author:         Matt Parsons
maintainer:     parsonsmattt@gmail.com
copyright:      2019 Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/persistent-pagination

library
  exposed-modules:
      Database.Persist.Pagination
  other-modules:
      Paths_persistent_pagination
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , persistent
    , conduit
    , mtl
    , foldl
    , microlens
  default-language: Haskell2010

test-suite persistent-pagination-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_persistent_pagination
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , persistent-pagination
  default-language: Haskell2010
